--- a/TSQL/SQLGenerator/TSQLTest/TSQLTest.csproj
+++ b/TSQL/SQLGenerator/TSQLTest/TSQLTest.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="XMLFile1.xml" />
+    <Content Include="XMLFile2.xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SQLGen.Core\SQLGen.Core.csproj">
