--- a/TSQL/SQLGenerator/SQLGen.Core/SQLGen.Core.csproj
+++ b/TSQL/SQLGenerator/SQLGen.Core/SQLGen.Core.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ICTE.cs" />
     <Compile Include="IAggregate.cs" />
     <Compile Include="ICommon.cs" />
     <Compile Include="ICondition.cs" />
